# ELFReader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TC-powerpc.cmake  TC-powerpc32.cmake  TC-powerpc64.cmake  common.mk  main  main.mk  makefile  src.mk  test.mk
app/: CMakeLists.txt  (+1 more)
components/elf_object_builder/: CMakeLists.txt
components/elf_object_builder/include/: ElfBuildDirector.hpp  ElfObjectBuilder.hpp  ElfObjectBuilderCreator.hpp  ElfObjectBuilderX32.hpp  ElfObjectBuilderX64.hpp  ElfObjectTraits.hpp  ElfObjectX32.hpp  ElfObjectX64.hpp  IElfObjectBuilder.hpp
components/elf_object_builder/src/: ElfBuildDirector.cpp  ElfObjectBuilder.cpp  ElfObjectBuilderCreator.cpp  ElfObjectBuilderX32.cpp  ElfObjectBuilderX64.cpp
components/elf_object_builder/test/: CMakeLists.txt  Elf32BitElfBuildDirectorTest.cpp  Elf32BitElfStructureInfoBuildingTest.cpp  Elf32BitNoteHeaderBuildingTest.cpp  Elf32BitNoteSectionsBuildingTest.cpp  Elf32BitRelocationHeadersBuildingTest.cpp  Elf32BitRelocationSectionsBuildingTest.cpp  Elf32BitRelocationWithAddendHeadersBuildingTest.cpp  Elf32BitRelocationWithAddendSectionsBuildingTest.cpp  Elf32BitStringTableSectionsBuildingTest.cpp  Elf32BitSymbolHeadersBuildingTest.cpp  Elf32BitSymbolTableSectionsBuildingTest.cpp  Elf32BitSymbolsBuildingTest.cpp  Elf64BitElfBuildDirectorTest.cpp  Elf64BitElfStructureInfoBuildingTest.cpp  Elf64BitNoteHeaderBuildingTest.cpp  Elf64BitNoteSectionsBuildingTest.cpp  Elf64BitRelocationHeadersBuildingTest.cpp  Elf64BitRelocationSectionsBuildingTest.cpp  Elf64BitRelocationWithAddendHeadersBuildingTest.cpp  Elf64BitRelocationWithAddendSectionsBuildingTest.cpp  Elf64BitStringTableSectionsBuildingTest.cpp  Elf64BitSymbolHeadersBuildingTest.cpp  Elf64BitSymbolTableSectionsBuildingTest.cpp
components/elf_parts_assembler/: CMakeLists.txt
components/elf_parts_assembler/include/: ElfPart.hpp  ElfPartAssembler.hpp  ElfPartFromSectionVisitor.hpp  FieldDescriptionUtility.hpp  GnuPropertyVisitor.hpp  IElfPartAssembler.hpp  IElfPartFromSectionVisitor.hpp  IGnuPropertyVisitor.hpp  NoteDescriptorUtility.hpp  ReadingFileContentUtility.hpp
components/elf_parts_assembler/src/: ElfPartAssembler.cpp  ElfPartFromSectionVisitor.cpp  FieldDescriptionUtility.cpp  GnuPropertyVisitor.cpp  NoteDescriptorUtility.cpp  ReadingFileContentUtility.cpp
components/elf_parts_assembler/test/: CMakeLists.txt  ElfPartFromFileHeaderAssemblingTest.cpp  ElfPartFromNullSectionTest.cpp  ElfPartFromProgramHeadersAssemblingTest.cpp  ElfPartFromSectionHeadersAssemblingTest.cpp  ElfPartFromUnknownSectionTest.cpp  FieldDescriptionUtilityTest.cpp  GnuPropertyVisitorTest.cpp  NoteDescriptorUtilityTest.cpp
components/elf_section_builder/: CMakeLists.txt
components/elf_section_builder/include/: ElfBuildDirector.hpp  ElfObjectTraits.hpp  ElfObjectX64.hpp  ElfSectionBuilder.hpp  IElfSectionBuilder.hpp  INoteDescriptorBuilder.hpp  NoteDescriptorBuilder.hpp  NoteSectionBuildingUtility.hpp
components/elf_section_builder/src/: ElfBuildDirector.cpp  ElfSectionBuilder.cpp  NoteDescriptorBuilder.cpp  NoteSectionBuildingUtility.cpp
components/elf_section_builder/test/: CMakeLists.txt  Elf32BitElfBuildDirectorTest.cpp  Elf32BitNoteSectionsBuildingTest.cpp  Elf32BitRelocationSectionsBuildingTest.cpp  Elf32BitRelocationWithAddendSectionsBuildingTest.cpp  Elf32BitStringTableSectionsBuildingTest.cpp  Elf32BitSymbolTableSectionsBuildingTest.cpp  Elf64BitElfBuildDirectorTest.cpp  Elf64BitNoteSectionsBuildingTest.cpp  Elf64BitRelocationSectionsBuildingTest.cpp  Elf64BitRelocationWithAddendSectionsBuildingTest.cpp  Elf64BitStringTableSectionsBuildingTest.cpp  Elf64BitSymbolTableSectionsBuildingTest.cpp  NoteDescriptorBuilderTest.cpp  NullSectionBuildingTest.cpp  UnknownSectionBuildingTest.cpp
components/elf_structure_info_builder/: CMakeLists.txt
components/elf_structure_info_builder/include/: ElfStructureInfoBuilder.hpp  ElfStructureInfoBuilderX32.hpp  ElfStructureInfoBuilderX64.hpp  ElfStructureInfoTraits.hpp  ElfStructureInfoX32.hpp  ElfStructureInfoX64.hpp  IElfStructureInfoBuilder.hpp
components/elf_structure_info_builder/src/: ElfStructureInfoBuilder.cpp  ElfStructureInfoBuilderX32.cpp  ElfStructureInfoBuilderX64.cpp
components/elf_structure_info_builder/test/: CMakeLists.txt  Elf32BitFileHeaderBuildingTest.cpp  Elf32BitProgramHeadersBuildingTest.cpp  Elf32BitSectionHeadersBuildingTest.cpp  Elf64BitFileHeaderBuildingTest.cpp  Elf64BitProgramHeadersBuildingTest.cpp  Elf64BitSectionHeadersBuildingTest.cpp
components/header_reader/: CMakeLists.txt
components/header_reader/include/: CheckingFileVersionUtility.hpp  ElfHeaderReaderX32.hpp
components/header_reader/src/: CheckingFileVersionUtility.cpp  ElfHeaderReaderX32.cpp
components/header_reader/test/: CMakeLists.txt  ElfHeaderReaderX32FileHeaderTest.cpp  ElfHeaderReaderX32ProgramHeaderTest.cpp  ElfHeaderReaderX64FileHeaderTest.cpp  ElfHeaderReaderX64SectionHeaderTest.cpp
components/section_reader/: CMakeLists.txt
components/ui/: CMakeLists.txt
src/: CMakeLists.txt  CheckingFileVersionUtility.cpp  ElfFileParserCreator.cpp  ElfFileParserX32.cpp  ElfFileParserX64.cpp  ElfHeaderReaderCreator.cpp  ElfHeaderReaderX32.cpp  ElfHeaderReaderX64.cpp  FileHeaderParserX32.cpp  FileHeaderParserX64.cpp  ProgramHeaderParserX32.cpp  ProgramHeaderParserX64.cpp  SectionHeaderParserX32.cpp  SectionHeaderParserX64.cpp  fileHeaderParser.cpp  main.cpp
src/utility/: CheckingFileVersionUtility.cpp  EndiannessUtility.cpp  LoggerSettingUtility.cpp
tests/: CMakeLists.txt  ElfFileParserCreatorTest.cpp  ElfFileParserX32FileHeaderTest.cpp  ElfFileParserX32ProgramHeaderTest.cpp  ElfFileParserX32SectionHeaderTest.cpp  ElfFileParserX32Test.cpp  ElfFileParserX64FileHeaderTest.cpp  ElfFileParserX64ProgramHeaderTest.cpp  ElfFileParserX64SectionHeaderTest.cpp  ElfFileParserX64Test.cpp  test_ElfFileParserCreator.cpp
tests/header_reader/: CMakeLists.txt  ElfHeaderReaderCreatorTest.cpp  ElfHeaderReaderX32SectionHeaderTest.cpp  ElfHeaderReaderX64FileHeaderTest.cpp  ElfHeaderReaderX64ProgramHeaderTest.cpp
(+93 files in other folders)
