add_subdirectory("${PROJECT_SOURCE_DIR}/lib/googletest" "lib/googletest")

add_executable(ElfFileParserCreatorTest ElfFileParserCreatorTest.cpp)

target_link_libraries(ElfFileParserCreatorTest gtest gmock gtest_main)
target_link_libraries(ElfFileParserCreatorTest ElfFileParser)


add_executable(ElfFileParserX32FileHeaderTest ElfFileParserX32FileHeaderTest.cpp)
target_link_libraries(ElfFileParserX32FileHeaderTest gtest gmock gtest_main)
target_link_libraries(ElfFileParserX32FileHeaderTest ElfFileParser)

add_executable(ElfFileParserX32ProgramHeaderTest ElfFileParserX32ProgramHeaderTest.cpp)
target_link_libraries(ElfFileParserX32ProgramHeaderTest gtest gmock gtest_main)
target_link_libraries(ElfFileParserX32ProgramHeaderTest ElfFileParser)


add_executable(ElfFileParserX64FileHeaderTest ElfFileParserX64FileHeaderTest.cpp)
target_link_libraries(ElfFileParserX64FileHeaderTest gtest gmock gtest_main)
target_link_libraries(ElfFileParserX64FileHeaderTest ElfFileParser)

add_executable(ElfFileParserX64ProgramHeaderTest ElfFileParserX64ProgramHeaderTest.cpp)
target_link_libraries(ElfFileParserX64ProgramHeaderTest gtest gmock gtest_main)
target_link_libraries(ElfFileParserX64ProgramHeaderTest ElfFileParser)


gtest_discover_tests(ElfFileParserCreatorTest)

gtest_discover_tests(ElfFileParserX32FileHeaderTest)
gtest_discover_tests(ElfFileParserX32ProgramHeaderTest)

gtest_discover_tests(ElfFileParserX64FileHeaderTest)
gtest_discover_tests(ElfFileParserX64ProgramHeaderTest)
